--- a/index.html
+++ b/index.html
@@ -33,16 +33,10 @@ title: Home
     <div class="col-md-6">
       <div class="panel">
         <div class="panel-heading">Ruminations</div>
-        <div class="panel-body">
+        <div class="panel-body" id="app">
           <p>A mind needs books as a sword needs a whetstone,</p>
           <p>if it is to keep its edge.</p>
-          <p>Taking notes reminds myself the path of righteous.</p>
-          <ul class="list-group">
-            <li class="list-group-item">A Song of Ice and Fire</li>
-            <li class="list-group-item">C++ Primer</li>
-            <li class="list-group-item">C Programming Language</li>
-          </ul>
-          <p class="text-right"><a class="btn" href="/ruminations">Read</a></p>
+          <p class="text-right"><a class="btn" href="/ruminations">View More</a></p>
         </div>
       </div>
     </div>
